fix overflow in code blocks

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,9 +24,9 @@
 }
 
 .markdown pre {
-    @apply text-xs bg-gray-700 p-6 rounded-lg mb-10 lg:max-w-screen-md
+    @apply text-xs bg-gray-700 p-6 rounded-lg mb-10 lg:max-w-screen-md overflow-x-scroll
 }
 
 .markdown pre code {
-    @apply text-white
+    @apply text-white max-w-full
 }
